--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="fr">
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/shield-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <meta name="description" content="CyberShield PME - Solution de cybersécurité pour les petites et moyennes entreprises" />
+    <meta name="theme-color" content="#667eea" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="/shield-logo.svg" />
+
+    <title>CyberShield PME - Sécurité Informatique</title>
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
